k8s/redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  ports:
  - port: 6379
  selector:
    app.kubernetes.io/name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
        - image: redis:5.0-alpine
          name: redis
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command: ["sh", "-c", "nc -z localhost 6379"]
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["sh", "-c", "nc -z localhost 6379"]
            initialDelaySeconds: 3
